--------------
Release 1.0.3:
--------------
EMPIREDB-1:	Deprecated warning resolved by adding to additional parameters to call to determineActionURL.
PRE-105:	All package names changed to org.apache.empire.

--------------
Release 1.0.2:
--------------
PRE-104:    Enum RecordActionSupport.SessionPersistance moved to SessionPersistence. Old enum made Deprecated.  	 	
PRE-103:	New form action support class "BeanActionSupport" which allows form data exchange with JavaBeans. 	
PRE-102:	All Tags dependencies changed from DBColumn to Column and DBRecord to Record.

--------------
Release 1.0.1:
--------------
PRE-101:	Support for DBSQLScript (see Empire-db 2.0.1 changelog) added.