@@ -1,3 +1,6 @@
+Apache Empire-db
+Copyright 2008 The Apache Software Foundation
+
 --------------
 Release 1.0.3:
 --------------
